--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vechaiui/core": "^0.6.0",
     "@vechaiui/react": "^0.2.1",
     "axios": "^0.26.0",
+    "dotenv": "^16.0.0",
     "html-react-parser": "^1.4.8",
     "moment": "^2.29.1",
     "react": "^17.0.2",
