--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vechaiui/react": "^0.2.1",
     "axios": "^0.26.0",
     "dotenv": "^16.0.0",
+    "flowbite": "^1.3.4",
     "html-react-parser": "^1.4.8",
     "moment": "^2.29.1",
     "react": "^17.0.2",
